--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-# Top level directories
-/data/
-/bin/
+# Top level directories and files
+/data
+/bin
 
-# All directories
-docs/
-out*/
+# All directories and files
+docs
+out*
+*.out
+*.log
+__pycache__
